# sdk-python

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup_mslm.py  setup_mslm_email_verify.py  setup_mslm_otp.py
email_verify/: __init__.py  email_verify.py  single_verify_req_opts.py  single_verify_resp.py  single_verify_resp_mx.py
lib/: __init__.py  error.py  lib.py  mslm_errors.py  req_opts.py
mslm/: __init__.py  mslm.py  setup.py
mslm_email_verify/: setup.py
mslm_otp/: otp.py  setup.py
otp/: __init__.py  otp.py  otp_req.py  otp_req_opts.py  otp_resp.py  otp_send_req.py  otp_token_verify_req.py
scripts/: fmt.sh  generate_requirements.sh  publish.sh
