[project]
name = "sdk-python_Mslm"
version = "1.0.0"
authors = [
    { name="Mslm", email="support@mslm.io" },
]
description = "Mslm Python SDK"
readme = "README.md"
requires-python = ">=3.6, <4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mslmio/sdk-python"
Issues = "https://github.com/mslmio/sdk-python/issues"
